--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>Publicis Sapient, New York, NY</h3>
-                <p><strong>Senior User Experience Designer II</strong> • 4.25.2022 - 3.17.2023</p>
+                <p><strong>Senior User Experience Designer II (full-time)</strong> • 4.25.2022 - 3.17.2023</p>
                 <ul>
                   <li>Led the BNY Mellon project, serving as interim Product Owner and primary client liaison.</li>
                   <li>Delivered data-driven improvements to the design system, driving measurable UX outcomes.</li>
@@ -829,7 +829,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>FlightPath, New York, NY</h3>
-                <p><strong>"Digital Designer"</strong> • 10.5.2018 - 1.7.2020</p>
+                <p><strong>"Digital Designer" (full-time)</strong> • 10.5.2018 - 1.7.2020</p>
                 <ul>
                   <li>Championed best-practice UX for clients in Pharmaceutical {Merck Animal Health}, Telecommunications {Charter}, Philanthropic/Scientific {The Dana Foundation},  and E-commerce {Goya}</li>
                 </ul>
@@ -838,7 +838,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>WebLinc Workarea, Philadelphia, PA</h3>
-                <p><strong>Senior User Experience Designer</strong> • 7.3.2017 - 9.19.2018</p>
+                <p><strong>Senior User Experience Designer (full-time)</strong> • 7.3.2017 - 9.19.2018</p>
                 <ul>
                   <li>Focus: SaaS E-Commerce; Wireframe Prototyping, User Interviews, Testing & Developer Hand-off</li>
                   <li>B2B & B2C clients include: {Rachel Roy / Century 21 Fashion / WoodCraft / Paragon Sports}</li>
@@ -847,7 +847,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>O3 World, Philadelphia, PA</h3>
-                <p><strong>User Experience Designer</strong> • 7.27.2016 - 6.16.2017</p>
+                <p><strong>User Experience Designer (full-time)</strong> • 7.27.2016 - 6.16.2017</p>
                 <ul>
                   <li>Focus:  User Experience Design within a bona-fide Agile Scrum-Led Agency Environment with a focus on Digital Products; leveraging Lean UX and Atomic Design Ethos/Methodologies</li>
                   <li>Clients included: {WOVN App (iOS), Vertex SMB, SEIC}</li>
@@ -856,7 +856,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>ONE SIXTY OVER NINETY, Philadelphia, PA</h3>
-                <p><strong>Interaction Designer</strong> • 9.23.2014 - 7.9.2016</p>
+                <p><strong>Interaction Designer (full-time)</strong> • 9.23.2014 - 7.9.2016</p>
                 <ul>
                   <li>Focus: Interactive & User Experience, Information Architecture, Digital Consumer Branding</li>
                   <li>Clients included: {Comcast, Philadelphia Eagles, Power Home Remodeling Group, University of Wisconsin-Madison, Kent State University, Texas A&M}</li>
@@ -865,7 +865,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>Leadnomics, Philadelphia, PA</h3>
-                <p><strong>Senior Web Designer</strong> • 7.29.2011 - 9.6.2014</p>
+                <p><strong>Senior Web Designer (full-time)</strong> • 7.29.2011 - 9.6.2014</p>
                 <ul>
                   <li>Responsive Web Designer with a focus on mobile-first design ethos and funnel conversion optimization serving {Insurance, Healthcare, and Financial Services}.</li>
                   <li>Design by data; partnered with Data Scientists, Marketing VP’s, and senior leadership.</li>
@@ -874,7 +874,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>Turn5 Inc., Malvern, PA</h3>
-                <p><strong>Senior Web Designer</strong> • 9.8.2008 - 7.8.2011</p>
+                <p><strong>Senior Web Designer (full-time)</strong> • 9.8.2008 - 7.8.2011</p>
                 <ul>
                   <li>Contributed to the growth of an E-commerce start-up that went from $10mil/year revenue to $40mil+/year revenue in the time that I was employed as team lead in the Design & Marketing department.</li>
                   <li>Owned email segmentation strategies and display ad campaigns; in tandem with physical catalog and fulfillment operations.</li>
