--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
 <p class="super-small-text">
     2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
-    <br><a href="https://codepen.io/zackgort/pen/yLmQore" target="_blank">My CodePen Fork</a>, which is a Fork of an original work <a href="https://codepen.io/massiebn/pen/bGEBgK" target="_blank">Minimal Navigation</a>
+    <br><a href="https://codepen.io/zackgort/pen/yLmQore" target="_blank">Hand-coded by yours truly, with some assistance from AI for quick-formatting and navigating nuanced coding cruxes</a>
 </p>
 
 
