--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
               <br>
 
               <ul>
-                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, <a href="#" class="modal-link" id="sans-hubris"
-                    data-image="https://i.ibb.co/KLPDrZQ/image-5-Copy.png">sans hubris
+                <p>Nay — this is an honest website. This website shares wth you my professional journey, <strong>sans hubris</strong>.</p>
                   </a>
                 </li>
               </ul>
@@ -444,7 +443,9 @@ I don’t have any work to show from here. I didn’t save any of my napkins.</p
 <br><br>
 Despite its tumultuous journey, FlightPath managed to preserve vital relationships with long-standing clients, specifically in the pharmaceutical sector {Merck, Zoetis, Charter, and Goya}. Operating in regulated industries, these clients demanded design solutions that not only adhered to WCAG 2.0 AA {or even AAA} compliance standards but also underwent rigorous scrutiny and approval from legal and regulatory marketing authorities. </p>
           <br><img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*9EZTgvxttDXOacHzI9axeQ.gif"> <br>   
-
+          <br><img src="https://i.ibb.co/NtWgd7T/dana-mobile-mockup.jpg"> <br>   
+          <br><img src="https://i.ibb.co/p4K0rCJ/baw-mobile-mockup.jpg"> <br>   
+          <br><img src="https://i.ibb.co/FJczkpC/dana-Dana-Mobile-Nav.jpg"> <br>   
 <p>This non-profit client only had a $20K budget. Look at what I gave them for $20K. I can’t show any of my Merck work due to NDA.
           </p>
 <br><br><br><br>
