--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <br>
 
               <ul>
-                <p>Nay — this is an honest website. This website shares wth you my professional journey, <strong>sans hubris</strong>.</p>
+                <p>Nay — this is an honest website. This website shares with you my professional journey, <strong>sans hubris</strong>.</p>
                   </a>
                 </li>
               </ul>
