--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li><a href="#" data-page="work">Work</a></li>
           <li><a href="#" data-page="misc">Life</a></li>
           <li><a href="#" data-page="resume">Resumé</a></li>
-          <li><a href+"#" data-page="sandbox">Sandbox</a></li>
+          <li><a href="#" data-page="sandbox">Sandbox</a></li>
         </div>
       </ol>
     </div>
