--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Zack&#39;s Minimalist Portfolio- MASTER SAVE 11.23</title>
+  <title>Zack&#39;s Minimalist Portfolio- MASTER SAVE 11.23 _ Nav-test.1.2</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -86,13 +86,11 @@
           <br>
 
     <div>
-          <li><a href="#" data-page="reason-and-resolution">Reason</a> <a href="#" data-page="ampersand">&</a></li>
-          <li><a href="#" data-page="about">Resolution</a></li>
-          <li><a href="https://ifimaybefrank.com/" target="_blank" rel="noopener noreferrer">Work</a>/<a href="#" data-page="work">CV</a>
+          <li><a href="#" data-page="reason-and-resolution">Reason</a> <a href="#" data-page="ampersand">&</a> <a href="#" data-page="about">Resolution</a></li>
+          <li><a href="https://ifimaybefrank.com/" target="_blank" rel="noopener noreferrer">Case Studies</a>/<a href="#" data-page="work">CV</a>
   </li></li>
-          <li><a href="#" data-page="misc">Life</a></li>
-          <li><a href="#" data-page="resume">Resumé</a></li>
-          <li><a href+"#" data-page="sandbox">Sandbox</a></li>
+          <li><a href="#" data-page="resume">Work</a>/<a href="#" data-page="misc">Life</a>/<a href="#" data-page="sandbox">Balance</a></li>
+
         </div>
       </ol>
     </div>
