--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -87,7 +88,7 @@
 
     <div>
           <li><a href="#" data-page="reason-and-resolution">Reason</a> <a href="#" data-page="ampersand">&</a> <a href="#" data-page="about">Resolution</a></li>
-          <li><a href="https://ifimaybefrank.com/" target="_blank" rel="noopener noreferrer">Case Studies</a>/<a href="#" data-page="work">CV</a>
+          <li><a href="https://ifimaybefrank.com/" target="_blank" rel="noopener noreferrer">Case Studies</a> <i style="font-size:10px" class="fa">&#xf08e;</i>/ <a href="#" data-page="work">CV</a>
   </li></li>
           <li><a href="#" data-page="resume">Work</a>/<a href="#" data-page="misc">Life</a>/<a href="#" data-page="sandbox">Balance</a></li>
 
