--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <br>
 
     <div>
-          <li><a href="#" data-page="reason-and-resolution">Reason</a>&nbsp;<a href="#" data-page="ampersand">&</a>&nbsp;<a href="#" data-page="about">Resolution</a></li>
+          <li><a href="#" data-page="reason-and-resolution">Reason</a> <a href="#" data-page="ampersand">&</a> <a href="#" data-page="about">Resolution</a></li>
           <li><a href="https://ifimaybefrank.com/" target="_blank" rel="noopener noreferrer">Case&nbsp;Studies</a> <i style="font-size:10px" class="fa">&#xf08e;</i>&nbsp;/&nbsp;<a href="#" data-page="work">CV</a>
   </li></li>
           <li><a href="#" data-page="resume">Work</a>&nbsp;/&nbsp;<a href="#" data-page="misc">Life</a>&nbsp;/&nbsp;<a href="#" data-page="sandbox">Balance</a></li>
@@ -95,7 +95,6 @@
         </div>
       </ol>
     </div>
-
 
     <div id="content">
       <!-- Content sections -->
