--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                   </a>
                 </li>
               </ul>
+                <br>
+                <p>Humbly,<br>Zack Gort</p>
+
+            </br>
+            </br>            
+            <img src="https://i.ibb.co/9bj4NnV/IMG-20191211-130649.jpg">
 
 
             <!-- [Signature SVG here] -->
