--- a/index.html
+++ b/index.html
@@ -2,6 +2,36 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <title>Zack&#39;s Minimalist Portfolio- MASTER SAVE 11.23 _ Nav-test.1.2</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+
+<script src="https://use.fontawesome.com/fd2263ad8f.js"></script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet"> <!-- Remove if not needed -->
+
+
+<meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Reason & Resolution</title>
+  <link rel="stylesheet" href="stylesheet.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
+</head><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
   <title>Reason &amp; Resolution — a UX Portfolio by Zack Gort </title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
@@ -91,8 +121,7 @@
 
             </br>
             </br>            
-            <img src="https://i.ibb.co/9bj4NnV/IMG-20191211-130649.jpg">
-
+            <img src="https://i.ibb.co/Q82WBds/2299765761344742582-5144774570.jpg">
 
             <!-- [Signature SVG here] -->
           </div>
@@ -211,7 +240,7 @@
             </ul>
             </br>
             </br>            
-            <img src="https://i.ibb.co/Vq0PcJL/FB-IMG-1508452344350-1.jpg">
+            <img src="https://i.ibb.co/Y3spCs9/I10A0969.jpg">
             <!-- https://miro.medium.com/v2/resize:fit:4000/format:webp/1*DkcmPIZj6roZML4w2kNkMw.png -->
           </div>
         </div>
@@ -907,7 +936,9 @@ AI will never have the patience required (nor physical dexterity) to run and ter
               <p><strong>Software:</strong> Figma, Adobe CS, Atlassian, Microsoft, Miro, with the ability to learn new protocols as required.</p>
             </section>
 
-
+          <br><img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*6ftVCi9PiL1q47VskwMbWA.png"><br>
+               <h4><span class="span">Before you go:</span> <a href="https://github.com/user-attachments/files/17689773/Zack.Gort.UX.Resume.2024.pdf" target="_blank">please download a copy of my resumé {PDF}</a>
+</h4>
 <br><br>
         </div>
       </div>
@@ -1015,6 +1046,11 @@ AI will never have the patience required (nor physical dexterity) to run and ter
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
   </body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
 </html>
 <!-- partial -->
   <script  src="./script.js"></script>
