--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
             <ul id="statement-list"></ul>
           </div>
         </div>
+
+          <br><img src="https://i.ibb.co/RCnjfFv/6105c90759377c59c854a562-ZAX02142.jpg"><br>
+      </div>
+
       </div>
 
 
