--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </div>
         </div>
 
-          <br><img src="https://i.ibb.co/RCnjfFv/6105c90759377c59c854a562-ZAX02142.jpg"><br>
+          <br><img src="https://i.ibb.co/PDgSSYp/image-396-min.png"><br>
       </div>
 
       </div>
