--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </div>
         </div>
 
-          <br><img src="https://i.ibb.co/PDgSSYp/image-396-min.png"><br>
+          <br><img src="https://miro.medium.com/v2/resize:fit:4096/format:webp/1*ZpyOMlmzMa0rPlNY--3KXA.png"><br>
       </div>
 
       </div>
