--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </ul>
             <li alt="[Solutions Architecture]">
               <a href="#" class="modal-link" id="salesforce-integration"
-                data-image="https://miro.medium.com/v2/resize:fit:4466/format:webp/1*mZdgz7yElh7nWKuuS8XZ2g.png">
+                data-image="https://i.ibb.co/0DPv3vQ/Frame-4349.png">
               Salesforce Integrations for YETI, West Marine, Aquasana, Hardinge, & Simpson Strong-Tie
               </a>
             </li>
