--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <ul>
                 <li alt="[SaaS Financial]">
                   <a href="#" class="modal-link" id="pershingx"
-                    data-image="https://miro.medium.com/v2/resize:fit:2560/format:webp/1*OenHCQmGa10wpCzR8o9PtA.png">
+                    data-image="https://i.ibb.co/hRnRByb/wove-advisory-landing-main.png">
                   Financial Product Design with BNY Mellon - Pershing X
                   </a>
                 </li>
