--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Zack&#39;s Minimalist Portfolio- MASTER SAVE 11.23 _ Nav-test.1.2</title>
+  <title>Zack&#39;s UX Story</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
